# rustoleum

./: README.md
character/src/: main.rs
class/doctests_exercise/src/: lib.rs
class/file_reader/src/: main.rs
class/file_size/src/: main.rs
class/rusty_journal/: Cargo.toml
class/rusty_journal/src/: main.rs  tasks.rs
misc/hanoi/: Cargo.toml
misc/hanoi/src/: main.rs
misc/hex_table/: Cargo.toml
misc/hex_table/src/: main.rs
misc/reversi/: Cargo.toml
misc/reversi/src/: board.rs  main.rs  screen.rs
misc/rusty_adams/: Cargo.toml
misc/rusty_adams/src/: game.rs  lib.rs  main.rs  tokenizer.rs
misc/rusty_adams/src/game/: parser.rs  writer.rs
misc/rusty_adams/tests/: idempotence.rs
misc/sequence_stats/: Cargo.toml
misc/sequence_stats/src/: main.rs
