[package]
name = "rusty_journal"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
structopt = "0.3"

[dependencies.chrono]
features = ["serde"]  # so we can serialize the DateTime field
version = "0.4"

[dependencies.serde]
features = ["derive"] # We'll need the derive feature.
version = "1.0"
